# roas

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  deny.toml
.cargo/: config.toml
.github/: codecov.yml  dependabot.yaml
.github/workflows/: checks.yaml  publish.yaml  release-stage.yaml  rust.yaml
crates/roas/: Cargo.toml  README.md
crates/roas-arazzo/: Cargo.toml  README.md
crates/roas-arazzo/src/: lib.rs  validation.rs
crates/roas-arazzo/src/common/: extensions.rs  mod.rs  reusable.rs
crates/roas-arazzo/src/v1_0/: components.rs  criterion.rs  description.rs  failure_action.rs  info.rs  mod.rs  parameter.rs  request_body.rs  reusable.rs  source_description.rs  step.rs  success_action.rs  version.rs  workflow.rs
crates/roas-arazzo/src/v1_1/: components.rs  criterion.rs  description.rs  expression_type.rs  failure_action.rs  from_v1_0.rs  info.rs  mod.rs  parameter.rs  request_body.rs  selector.rs  source_description.rs  step.rs  success_action.rs  version.rs  workflow.rs
crates/roas-arazzo/tests/: v1_0_test.rs  v1_1_test.rs
crates/roas-arazzo/tests/v1_0_data/: bad_duplicate_workflow_id.json  bad_empty_workflows.json  bad_goto_missing_target.json  bad_step_no_operation.json  full_workflow.yaml  minimal.json
crates/roas-arazzo/tests/v1_1_data/: bad_asyncapi_no_action.json  bad_self_fragment.json  full_async.yaml  minimal.json
crates/roas-cli/: Cargo.toml  README.md
crates/roas-cli/src/: arazzo.rs  main.rs  overlay.rs  preview.rs  versioned.rs
crates/roas-file-fetcher/: Cargo.toml  README.md
crates/roas-file-fetcher/src/: lib.rs
crates/roas-file-fetcher/tests/: file_test.rs
crates/roas-http-fetcher/: Cargo.toml  README.md
crates/roas-http-fetcher/src/: lib.rs
crates/roas-http-fetcher/tests/: http_test.rs
crates/roas-overlay/: Cargo.toml  README.md
crates/roas-overlay/src/: apply.rs  lib.rs  validation.rs
crates/roas-overlay/src/common/: apply.rs  extensions.rs  mod.rs
crates/roas-overlay/src/v1_0/: action.rs  info.rs  mod.rs  overlay.rs  version.rs
crates/roas-overlay/src/v1_1/: action.rs  info.rs  mod.rs  overlay.rs  version.rs
crates/roas-overlay/tests/: v1_0_test.rs  v1_1_test.rs
crates/roas-overlay/tests/v1_0_data/: bad_empty_actions.json  bad_invalid_jsonpath.json  bad_remove_and_update.json  base_petstore.json  remove_internal.expected.json  remove_internal.json  sequential_actions.expected.json  sequential_actions.yaml  targeted_overlay.expected.json  targeted_overlay.json
crates/roas-overlay/tests/v1_1_data/: bad_copy_and_update.json  bad_copy_invalid_jsonpath.json  base_with_source.json  copy_and_extend.expected.json  copy_and_extend.yaml  copy_overlay.expected.json  copy_overlay.json
crates/roas/src/: common.rs  lib.rs  loader.rs  merge.rs  v2.rs  v3_0.rs  v3_1.rs  v3_2.rs  validation.rs
crates/roas/src/common/: bool_or.rs  collapse.rs  extensions.rs  formats.rs  helpers.rs  merge.rs  reference.rs
crates/roas/src/v2/: collapse.rs  header.rs  info.rs  items.rs  merge.rs  operation.rs  parameter.rs  path_item.rs  response.rs  schema.rs  security_scheme.rs  spec.rs  tag.rs  validation.rs  xml.rs
crates/roas/src/v3_0/: callback.rs  collapse.rs  components.rs  from_v2.rs  info.rs  link.rs  media_type.rs  merge.rs  parameter.rs  path_item.rs  response.rs  schema.rs  security_scheme.rs  server.rs  spec.rs  validation.rs  xml.rs
crates/roas/src/v3_1/: callback.rs  collapse.rs  components.rs  discriminator.rs  example.rs  from_v3_0.rs  header.rs  info.rs  link.rs  media_type.rs  merge.rs  parameter.rs  path_item.rs  request_body.rs  response.rs  schema.rs  security_scheme.rs  server.rs  spec.rs  tag.rs  validation.rs  xml.rs
crates/roas/src/v3_2/: callback.rs  collapse.rs  components.rs  discriminator.rs  from_v3_1.rs  header.rs  info.rs  link.rs  media_type.rs  merge.rs  parameter.rs  path_item.rs  response.rs  schema.rs  security_scheme.rs  server.rs  spec.rs  tag.rs  validation.rs  xml.rs
crates/roas/tests/: loader_test.rs  v3_0_test.rs
crates/roas/tests/loader_data/: error.json  pets.json  petstore-cross-ref.json  petstore.json
crates/roas/tests/v2_data/: petstore-simple.json  petstore_expanded.json  petstore_full.json  uber.json
crates/roas/tests/v3_1_data/: oas-3-1-features.json  petstore-expanded.json  petstore_full.json  tictactoe.json
crates/roas/tests/v3_2_data/: 3.2-streaming-media-example.json  3.2-tags-example.json  oas-3-1-features.json  petstore-expanded.json  petstore_full.json  tictactoe.json  uspto.json
src/: common.rs  lib.rs  loader.rs  v2.rs  v3_0.rs  v3_1.rs  v3_2.rs  validation.rs
src/common/: bool_or.rs  extensions.rs  formats.rs  helpers.rs  loader.rs  mod.rs  reference.rs
src/v2/: external_documentation.rs  formats.rs  header.rs  info.rs  items.rs  mod.rs  operation.rs  parameter.rs  path_item.rs  paths.rs  reference.rs  response.rs  schema.rs  security_scheme.rs  spec.rs  tag.rs  validation.rs  xml.rs
src/v3_0/: callback.rs  components.rs  discriminator.rs  example.rs  external_documentation.rs  from_v2.rs  header.rs  info.rs  link.rs  media_type.rs  operation.rs  parameter.rs  path_item.rs  reference.rs  request_body.rs  response.rs  schema.rs  security_scheme.rs  server.rs  spec.rs  tag.rs  validation.rs  xml.rs
src/v3_1/: callback.rs  components.rs  discriminator.rs  example.rs  external_documentation.rs  from_v3_0.rs  header.rs  info.rs  link.rs  media_type.rs  operation.rs  parameter.rs  path_item.rs  request_body.rs  response.rs  schema.rs  security_scheme.rs  server.rs  spec.rs  tag.rs  validation.rs  xml.rs
src/v3_2/: callback.rs  components.rs  discriminator.rs  example.rs  external_documentation.rs  from_v3_1.rs  header.rs  info.rs  link.rs  media_type.rs  operation.rs  parameter.rs  path_item.rs  request_body.rs  response.rs  schema.rs  security_scheme.rs  server.rs  spec.rs  tag.rs  validation.rs  xml.rs
tests/: loader_test.rs  v2_test.rs  v3_0_test.rs  v3_1_test.rs  v3_2_test.rs
tests/v2_data/: petstore-with-external-docs.json
tests/v3_0_data/: callback-example.json
tests/v3_1_data/: callback-example.json  non-oauth-scopes.json  (+2 more)
(+5 files in other folders)
