[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
authors = ["Sergey Vilgelm <sergey@vilgelm.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sv-tools/roas"
repository = "https://github.com/sv-tools/roas"
keywords = ["openapi", "swagger"]

[workspace.dependencies]
enumset = "1.1.10"
lazy-regex = "3.6.0"
monostate = "1.0.0"
regex = "1.11.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.16"
url = "2.5.8"
