[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
authors = ["Sergey Vilgelm <sergey@vilgelm.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sv-tools/roas"
repository = "https://github.com/sv-tools/roas"
keywords = ["openapi", "swagger"]

[workspace.dependencies]
anyhow = "1.0.99"
clap = { version = "4.6.1", features = ["derive"] }
enumset = "1.1.10"
lazy-regex = "3.6.0"
monostate = "1.0.0"
regex = "1.11.2"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.16"
notify = "8.2"
notify-debouncer-mini = "0.7"
tiny_http = "0.12"
tokio = { version = "1.52", default-features = false }
url = "2.5.8"
webbrowser = "1"
