[package]
name = "roas-arazzo"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["openapi", "arazzo", "workflow", "swagger", "validation"]
description = "Rust implementation of the OpenAPI Arazzo Specification v1.0 — parse and validate"
readme = "README.md"
categories = ["web-programming", "parser-implementations"]
include = ["src", "Cargo.toml", "README.md"]
publish = true

[features]
default = ["v1_0"]
# Support for Arazzo v1.0.x.
v1_0 = []
# Support for Arazzo v1.1.x. Independent of `v1_0`; enable both to get
# the additional `From<v1_0::Description> for v1_1::Description`
# upconversion impl.
v1_1 = []

# `clap::ValueEnum` impls for `validation::ValidationOptions`, for
# downstream CLIs.
clap = ["dep:clap"]

[dependencies]
clap = { workspace = true, optional = true }
enumset.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true
