[package]
name = "roas-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Command-line front-end for the roas OpenAPI library: validate and convert OpenAPI 2.0 / 3.0 / 3.1 / 3.2 specs (JSON or YAML)"
readme = "README.md"
categories = ["command-line-utilities", "web-programming"]
include = ["src", "Cargo.toml", "README.md"]
publish = true

[[bin]]
name = "roas"
path = "src/main.rs"

[dependencies]
roas = { version = ">=0.13.1", path = "../roas", features = ["clap", "v2", "v3_0", "v3_1", "v3_2"] }
roas-file-fetcher = { version = ">=0.1", path = "../roas-file-fetcher", features = ["yaml"] }
roas-http-fetcher = { version = ">=0.1", path = "../roas-http-fetcher", features = ["yaml"] }
anyhow.workspace = true
clap.workspace = true
enumset.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
