[package]
name = "roas-cli"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Command-line front-end for the roas OpenAPI library: validate, convert, and preview OpenAPI 2.0 / 3.0 / 3.1 / 3.2 specs (JSON or YAML)"
readme = "README.md"
categories = ["command-line-utilities", "web-programming"]
include = ["src", "Cargo.toml", "README.md"]
publish = true

[[bin]]
name = "roas"
path = "src/main.rs"

[dependencies]
roas = { version = ">=0.17", path = "../roas", features = ["clap", "v2", "v3_0", "v3_1", "v3_2"] }
roas-overlay = { version = ">=0.2", path = "../roas-overlay", features = ["clap", "v1_0", "v1_1"] }
roas-file-fetcher = { version = ">=0.1", path = "../roas-file-fetcher", features = ["yaml"] }
roas-http-fetcher = { version = ">=0.2", path = "../roas-http-fetcher", features = ["yaml"] }
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
enumset.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
webbrowser.workspace = true
