[package]
name = "roas-file-fetcher"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Filesystem fetcher for the roas OpenAPI loader, with an async variant and optional YAML support"
readme = "README.md"
categories = ["web-programming", "parser-implementations"]
include = ["src", "Cargo.toml", "README.md"]
publish = true

[features]
default = []
# Enable the `AsyncFileFetcher` (and the `tokio::fs::read` runtime
# dep that backs it). With this feature off, the crate is sync-only
# and does not depend on tokio.
async = ["dep:tokio"]
# Parse YAML file bodies in addition to JSON. Selection is by file path
# extension (`.yaml` / `.yml`).
yaml = ["dep:serde_yaml_ng"]

[dependencies]
roas = { version = ">=0.13.2", path = "../roas" }
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["fs", "rt"] }
url.workspace = true

[dev-dependencies]
# `macros` is needed only by `#[tokio::test]` in the async integration tests;
# downstream consumers of the public `async` feature should not have to pull
# in tokio-macros just to use `AsyncFileFetcher`.
tokio = { workspace = true, features = ["macros"] }
