[package]
name = "roas-http-fetcher"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "HTTP/HTTPS fetcher for the roas OpenAPI loader"
readme = "README.md"
categories = ["web-programming", "parser-implementations"]
include = ["src", "Cargo.toml", "README.md"]
publish = true

[dependencies]
roas = { version = "0.13", path = "../roas" }
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true
