[package]
name = "roas-overlay"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Rust implementation of the OpenAPI Overlay Specification v1.0 / v1.1 — parse, validate, and apply"
readme = "README.md"
categories = ["web-programming", "parser-implementations"]
include = ["src", "Cargo.toml", "README.md"]
publish = true

[features]
default = ["v1_0"]
# Support for OpenAPI Overlay v1.0.x
v1_0 = []
# Support for OpenAPI Overlay v1.1.x (not yet implemented)
v1_1 = []

# `clap::ValueEnum` impls for `apply::ApplyOptions` and
# `validation::ValidationOptions`, for downstream CLIs.
clap = ["dep:clap"]

[dependencies]
clap = { workspace = true, optional = true }
enumset.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_path.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true
